style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap");

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-padding-top: 2rem;
    list-style: none;
    text-decoration: none;
    font-family: "Poppins", sans-serif;
}


:root {
    /* Primary Color */
    --primary-color: #31fe9f;
    
    /* Secondary Colors */
    --dark-gray: #191919;
    --medium-gray: #242424;
    --light-green: #23d497;
    
    /* Text Colors */
    --text-color: #ffffff; /* White */
    --text-color-dark: #000000; /* Black */
    
    /* Background Colors */
    --background-color: var(--dark-gray);
    --gradient-color: linear-gradient(135deg, var(--primary-color), var(--light-green));
    
    /* Icon Colors */
    --icon-color: var(--medium-gray);
    
    /* Border Colors */
    --border-color: var(--light-green);
}
  
  html ::-webkit-scrollbar{
    width: 0.5rem;
}
  html ::-webkit-scrollbar-track{
    background: transparent;
}
  html ::-webkit-scrollbar-thumb{
    background: var(--primary-color);
    border-radius: 6rem;
}

header{
    position: fixed;
    width: 100%;
    top: 0;
    right: 0;
    display: flex;
    align-items: center;
    z-index: 1000;
    justify-content: space-between;
    background: #eeeff1;
    padding: 15px 80px;
}

.navbar{
    display: flex;
}

.navbar li{
    position: relative;
}

.navbar a{
    font-size: 1.2rem;
    padding: 10px 20px;
    color: var(--text-color-dark);
    font-weight: 500;
}
.navbar a::after{
    content: "";
    width: 0%;
    height: 3px;
    background: var(--gradient-color);
    position: absolute;
    bottom: -4px;
    left: 0;
    transition: 0.5s;
}

.navbar a:hover::after{
    width: 100%;
}

#menu-icon{
    font-size: 24px;
    cursor: pointer;
    z-index: 10001;
    display: none;
}
.header-btn a{
    padding: 10px 20px;
    color: var(--text-color-dark);
    font-weight: 500;
}
.header-btn .log-in{
    background: var(--medium-gray);
    color: white;
    border-radius: 0.5rem;
}
.header-btn .log-in:hover{
    background: var(--primary-color);
    color: var(--medium-gray);
    transition: 0.5s;
}

.home{
    width: 100%;
    min-height: 100vh;
    margin-top: 8rem;
    position: relative;
    background: url(img/design4.png);
    background-position: center right;
    background-size: cover;
    background-repeat: no-repeat;
    display: grid;
    align-items: center;
    grid-template-columns: repeat(2, 1fr);
}

.text{
    padding: 15px 80px;
    /* given extra margin to center */
    margin-bottom: 5rem;
}

.text h1{
    font-size: 4.5rem; 
    letter-spacing: 2px;
}

.text span{
    color: var(--primary-color);
}

.text p{
    margin: 0.5rem 0 1rem;
}

.app-stores{
    display: flex;
}

.app-stores img{
    width: 140px;
    margin-right: 1rem;
    cursor: pointer;
}

.form-container form{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 4rem;
    position: absolute;
    bottom: 4rem;
    left: 210px;
    background: white;
    padding: 25px;
    border-radius: 0.5rem;
}

.input-box{
    flex: 1 1 7rem;
    display: flex;
    flex-direction: column;
}

.input-box span{
    font-size: 1.2rem;
    font-weight: 500;
}

.input-box input{
    padding: 7px;
    outline: none;
    border: none;
    background: #eeeff1;
    border-radius: 0.5rem;
    font-size: 1.2rem;
}

.form-container form .btn{
    flex: 1 1 7rem;
    border: none;
    padding: 10px 34px;
    border-radius: 0.5rem;
    background: var(--medium-gray);
    color: white;
    font-size: 1.2rem;
    font-weight: 500;
}

.form-container form .btn:hover{
    background: var(--primary-color);
    color: var(--medium-gray);
    transition: 0.5s;
}
/* 
.ride{
    margin-top: 60px;
} */

.heading{
    margin-top: 60px;
    text-align: center;
}

.heading span{
    font-weight: 500;
    text-transform: uppercase;
}

.heading h1{
    font-size: 2rem;
}

.ride-container{
    display: grid;
    align-items: center;
    grid-template-columns: repeat(auto-fit,minmax(250px, auto));
    gap: 1rem;
    margin-top: 2rem;
    margin: 0 4rem;
}

.ride-container .box{
    text-align: center;
    padding: 20px;
}

.ride-container .box .bx{
    font-size: 34px;
    padding: 10px;
    background: #eeeff1;
    border-radius: 0.5rem;
    color: var(--primary-color);
}

.ride-container .box h2{
    font-size: 1.3rem;
    font-weight: 500;
    margin: 1.4rem 0 0.5rem;
}

.ride-container .box .bx:hover, .ride-container .box .bxs-calendar-check{
    background: var(--primary-color);
    color: white;
}

.services-container{
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(300px, auto));
    gap: 2rem;
    margin-top: 2rem;
    margin: 0 4rem;
}

.services-container .box{
    padding: 10px;
    /* margin-top: 2rem; */
    border-radius: 0.5rem;
    /* box-shadow: 1px 4px 41px rgba(0, 0, 0, 0.1); */
}

.box span{
    color: black;
}

.card-details .tags{
    padding: 0 10px;
    background:#eeeff1;
    width: 58px;
    border-radius: 0.2rem;
    margin: 1rem 0rem 0rem 0.5rem;
}

.services-container .box h3{
    font-weight: 500;
}

.services-container .box h2{
    font-size: 1.3rem;
    font-weight: 500;
    /* color: var(--primary-color); */
    color: white;
    margin: 0.2rem 0 0.5rem;
}


#outer-container{
    user-select: none;
    background: var(--light-green);
    /* background: var(--medium-gray); */
    /* margin: 0 auto; */
    max-width: 300px;
    margin-top: 5vh;
    border-radius: 10px;
}

.card-head{
    text-align: center;
    position: relative;

}


.card-head img{
    height: 200px;
    width: 100%;
    object-fit: cover;
    border-radius: 5px 5px 45px 45px;
    box-shadow: 0px 10px 50px #696b73;
}
.name{
    font-size: 24px;
    font-weight: 500;
}

h4{
    margin: 10px 0px;
}


.card-details{
    margin-top: 1rem;
    padding: 8px;
}

.action-btn{
    display: flex;
    align-items: center;
    justify-content: center;
    padding-bottom: 0.4rem;
    gap: 1rem;
}

.btn{
    border-radius: 15px 15px 15px 0px;
    font-weight: 600;
    padding: 10px 24px;
    font-size: 16px;
    border: none;
    background-color: var(--primary-color);
    /* color: white; */
    color: #000000;
    display: block;
    margin: 0 auto;
    transition: 0.5s ease;
    cursor: pointer;
}

.btn:hover{
    transform: translateY(-5px);
}


.btn-2{
    border-radius:  15px 15px 0px;
    font-weight: 600;
    padding: 10px 24px;
    font-size: 16px;
    border: none;
    background-color: rgb(26, 23, 23);
    color: white;
    /* box-shadow: 0px 5px 10px #373535; */
    transition: 0.5s ease;
    display: block;
    margin: 0 auto;
    cursor: pointer;
}


.btn-2:hover{
    transform: translateY(-5px);
}

.about-container{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin-top: 2rem;
    min-height: 100vh;
    align-items: center;
    gap: 1rem;
    /* margin-left: 4rem; */
    background: url(https://images.unsplash.com/photo-1496147539180-13929f8aa03a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
    /* object-fit: cover; */
    background-position: center right;
    background-size: cover;
    background-repeat: no-repeat;
    /* margin-right: 4rem; */
}

.about-container span{
    color: var(--primary-color);
}

.about-container h1{
    color: white;
    font-size: 3.4rem;
}


/* .about-img img{
    width: 100%;
} */


.about-text p{
    margin: 0.7rem 0 1.2rem;
}



.about-text .about-btn{
    width: 130px;
    margin: 0.7rem 0 1.2rem;
}

.reviews-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
    gap: 1rem;
    align-items: center;
    margin-top: 2rem;
    margin: 0 4rem;
}

.rev-img{
    width: 70px;
    height: 70px;
}

.rev-img img{
    width: 100%;
    height: 100%;
    border-radius: 50%;
    object-fit: cover;
    object-position: center;
    border: 2px solid var(--primary-color);
}

.reviews-container .box{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 20px;
    box-shadow: 1px 4px 41px rgba(0, 0, 0, 0.1);
    border-radius: 0.5rem;
}

.reviews-container .box h2{
    font-size: 1.2rem;
    font-weight: 600;
    margin: 0.5rem 0 0.5rem;
}

.reviews-container .box p{
    font-style: italic;
}

.reviews-container .box .stars .bx{
    color: #31fe9f;
}

.newsletter{
    background: var(--gradient-color);
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 2rem;
    width: 100%;
    height: 200px;
    padding: 2rem 0;
}

.newsletter h2{
    color: white;
    font-size: 1.8rem;
}

.newsletter .box{
    margin-top: 1rem;
    background: white;
    border-radius: 0.5rem;
    display: flex;
    padding: 4px 8px;
    width: 450px;
    justify-content: space-between;
}

.newsletter .box .subs-btn{
    border-radius: 15px;
    font-weight: 600;
    padding: 10px 24px;
    font-size: 16px;
    background-color: var(--primary-color);
    color: #000000;
    display: block;
    cursor: pointer;
}

.newsletter .box input{
    border: none;
    outline: none;
}

